# ChangeLog for mail-client/claws-mail-tnef-parse
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-tnef-parse/ChangeLog,v 1.5 2013/05/08 04:06:17 fauli Exp $

  08 May 2013; Christian Faulhammer <fauli@gentoo.org>
  claws-mail-tnef-parse-0.3.14.ebuild:
  prepare plugin for mail-client/claws-mail-3.9.1

  03 Jan 2013; Christian Faulhammer <fauli@gentoo.org>
  claws-mail-tnef-parse-0.3.14.ebuild:
  reintroduce deletion of .a and .la files

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  claws-mail-tnef-parse-0.3.14.ebuild:
  Stable for x86, wrt bug #448968

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  claws-mail-tnef-parse-0.3.14.ebuild:
  Stable for amd64, wrt bug #448968

*claws-mail-tnef_parse-0.3.14 (20 Nov 2012)

  20 Nov 2012; Christian Faulhammer <fauli@gentoo.org>
  +claws-mail-tnef_parse-0.3.14.ebuild:
  version bump

  20 Nov 2012; Christian Faulhammer <fauli@gentoo.org>
  -claws-mail-tnef_parse-0.3.12.ebuild:
  clean up

  31 Oct 2012; Andreas Schuerch <nativemad@gentoo.org>
  claws-mail-tnef_parse-0.3.13.ebuild:
  x86 stable, see bug 437814

  24 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
  claws-mail-tnef_parse-0.3.13.ebuild:
  Stable for amd64, wrt bug #437814

*claws-mail-tnef_parse-0.3.13 (30 Jun 2012)

  30 Jun 2012; Christian Faulhammer <fauli@gentoo.org>
  +claws-mail-tnef_parse-0.3.13.ebuild:
  version bump

  04 May 2012; Jeff Horelick <jdhore@gentoo.org>
  claws-mail-tnef_parse-0.3.12.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  11 Apr 2012; Christian Faulhammer <fauli@gentoo.org>
  -claws-mail-tnef_parse-0.3.11.ebuild:
  clean up

  07 Apr 2012; Markus Meier <maekke@gentoo.org>
  claws-mail-tnef_parse-0.3.12.ebuild:
  x86 stable, bug #387547

  04 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #206112

  25 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  claws-mail-tnef_parse-0.3.12.ebuild: