@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST tnef_parse-0.3.13.tar.gz 410855 SHA256 280b27a0896beaaac219b7b07bdbb19fcdcd3bff4144475d696f117dc9e5b5a8 SHA512 443e514964a42e43c13c67a9870eb67192f2fce9782e600e8957f7f2b10de75b42b9e1114d58da87a64690aa33251b9d3256640218581da955cd40ec8421d086 WHIRLPOOL 665641ee4eea7dc21deb9c08886bfcc3456dfa0056c0b7efd4fe9ec817876c6aa9fe4e192147ad5539ba5738bd5f60233fca75a8256a8f9f7d49ee6e515cdb06
 DIST tnef_parse-0.3.14.tar.gz 411136 SHA256 41e4b3c45896bc20359bec007b7ee83961510d50e957defb92fd315a6b7d6a75 SHA512 6ddd57bdca9734a5480915e2c03077a3edb1dbf026d92159c5753fb87c16c1c6c4ec37d9d4430fc2a407716204f6039a287aba40440c9b39ebc2509f1ded2eea WHIRLPOOL 5a0f23d41c2728c848470d3f168ce1e6e995b8d885362e009173912618a94d1bf2141ab37509bdd8cf06788df39150df6387ba0156b734eeb4150c47475b3cef
-EBUILD claws-mail-tnef-parse-0.3.13.ebuild 836 SHA256 fd51610de0b783bfc1fec6242e43a0db7b10dbd45496755521b4234bc7609c66 SHA512 364a0e6aef358779fe9b1d2ed0ff577fd66d8918a4296906dde8de15a25beede0bdc115993a670dac4c2f893585cf48135fca2a19785a2d2d249a37bbd21abc1 WHIRLPOOL 5ab7cd8336b5a8d2f82f1751b0ecf4c8e746fcdda567748dafd0417b03ba097a7b3dd007cc4ec2a0067472c6489fab84eac6fd457548b179a614f98796dea3ec
 EBUILD claws-mail-tnef-parse-0.3.14.ebuild 826 SHA256 7b8ae8e39103a1b6e5389a4b9ec539b8fbc47a42c2f79b6dc082a75c3312a2cf SHA512 045b37b5ecf03fb2c823896498789becd50fa4441cf7d9a5f377dbfda1a54d866e7bebdd7e8fd6fe6f81db27be8c6cca02fc2ceef869b8a898d0e48d854562c9 WHIRLPOOL 5d417c89ec72c39cf805e6c27a7d68070ea812f0db76c2137b615a1cf4323510c7192056d67c584e99e312de56d409a5d6fae7d112c918cd0c5473282fed9b30
-MISC ChangeLog 7303 SHA256 9fcff3ab6908cb8ee793222338e04da8fefcef7d8d1aa48e0816a98ac38ca113 SHA512 a68739403f6eb92fe874847b9ec18afe6fb5a6548a17e158a372887ab17b20a2a5e4a2d058afb9635d2006b96317600089e8259aa799c21171a32f8e66d8bd33 WHIRLPOOL 41d39ccb633a9d32dac5eb86c1bdf183a3504986fb9b20b73a3e54042498e14f13d8735ac68b9ae8732bc30b1fdf49ffc2ce885e30e411f083d88dd1a759fb9d
+MISC ChangeLog 7410 SHA256 0cd8c4238dfb11e1f36a51f4954f7ae5730b1cc61c274f56bea7b9ad5f55f118 SHA512 aa71aa5af48d13152e1e5b6e9e2478cd75bad65812cce3d7ff6f2f3c878f50bd9ce7a9e34f5f6b3dc53f2d030a332ad1f6199ee0b91fae6ff26a7abdd1f0cbbc WHIRLPOOL 7b479ce25dd3ec35ee213d782e05c91c5227bdad811998dd6b052d8fb7c19a4664ac3988abd50b0835a61b4884bdc184a7f9fdb3f13db45005c2a3ef71f7d7fc
 MISC metadata.xml 263 SHA256 fccc92cbfc301eb65d5ea4c614dd69b256cf2a6ddc17fa631e28420d0d2b1622 SHA512 951dba4b79af455c34b4e3519813e09d19c4b6bc0cde462a0917093528f3745d7474f803968da7f16d7e63c9053f41d1f698744f04b6bf606e4ca948993c8701 WHIRLPOOL 0068c0b9e1fd8d29ca3609b0f0d638dd93a4c4ed4b47fc0c336b2407c1b60cd8e4dd6ff5fa17f473280b9bc1c8b2c6580206dd04ed8e3007a72b268541e68188
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGJzzoACgkQNQqtfCuFneNd6wCeJUfDIwFR2PTAwhBHr91Hnwzd
-cQIAniHw2CokoVSltFapK0lYKdynpWUl
-=APil
+iEYEAREIAAYFAlGJz58ACgkQNQqtfCuFnePzoQCfUqnFVDa5q3W5tNcVPnlv+D0z
+t7oAnihpeCTzViJjSo8fFMwzp08Tt1e8
+=RdL/
 -----END PGP SIGNATURE-----
