@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/claws-mail-tnef-parse
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-tnef-parse/ChangeLog,v 1.5 2013/05/08 04:06:17 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-tnef-parse/ChangeLog,v 1.6 2013/05/08 04:07:58 fauli Exp $
+
+  08 May 2013; Christian Faulhammer <fauli@gentoo.org>
+  -claws-mail-tnef-parse-0.3.13.ebuild:
+  clean up
 
   08 May 2013; Christian Faulhammer <fauli@gentoo.org>
   claws-mail-tnef-parse-0.3.14.ebuild:
